Fix headers on narrow viewpoint

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,6 @@ header, hgroup, main, nav, section, summary {
 body {
   font: 400 18px "Dosis", sans-serif;
   line-height: 1.5;
-  letter-spacing: 0.05em;
   background: #fff;
   color: #fff;
   min-width: 320px;
@@ -255,7 +254,8 @@ h3 {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 3rem;
+  line-height: 1.3;
 }
 
 h2 {
@@ -280,7 +280,6 @@ h2 {
   height: 50px;
   border-radius: 50%;
   border: 1px solid #ff7b00;
-  letter-spacing: 0;
 }
 
 .scroll-down:before {
